tests/suite/fail/types/comparison_mismatch.ny
fn main() {
    let s = "hi"
    if s == 1 { print(1) } //~ ERROR type mismatch in `comparison` operation
}
